test/fail/unfinished_comment.min
program start
$ Unfinished comment
end
